[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/PlayfairDisplay-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/MenuScreens/Summary.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Summary" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 144, 48 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 72.0
margin_top = 8.0
margin_right = 243.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "You made it out in:"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTime" type="Label" parent="CanvasLayer"]
margin_left = 136.0
margin_top = 88.0
margin_right = 176.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="."]
margin_left = 120.0
margin_top = 136.0
margin_right = 203.0
margin_bottom = 156.0
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="Button" parent="."]
margin_left = 240.0
margin_top = 136.0
margin_right = 293.0
margin_bottom = 156.0
text = "Levels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
margin_left = 32.0
margin_top = 136.0
margin_right = 80.0
margin_bottom = 156.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
